--- a/src/style/style.css
+++ b/src/style/style.css
@@ -3,15 +3,21 @@
 @tailwind utilities;
 
 @layer base {
+
+  *,
+  :before,
+  :after {
+    max-width: 100vw;
+  }
+
   body {
     margin: 0;
     font-family: "Ubuntu", "Fira Code", sans-serif;
     font-size: 16px;
+    max-width: 100vw;
   }
 
   a {
     @apply hover:italic
   }
 }
-
-
